<resources>
    <string name="app_name">Insoles Manager 3.1</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_key_battery_warning_switch">battery_warning</string>
    <string name="pref_title_battery_warning_switch">Enable Low Battery Warning</string>
    <string name="pref_description_warning_switch">Enable the warnings when the insole battery is lower than threshold.</string>

    <string name="pref_key_connection_warning_switch">connection_warning</string>
    <string name="pref_title_connection_warning_switch">Enable Connection Interruption Warning</string>
    <string name="pref_description_connection_switch">Enable the warnings when the insole connection is interrupted.</string>

    <string name="pref_key_battery_low_threshold">low_battery_value</string>
    <string name="pref_title_battery_low_threshold">The critical battery threshold(%)</string>
    <string name="pref_default_battery_low_threshold">10</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Example</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_test">TestActivity</string>


    <!-- wrong_paired_insoles_number_dialog -->
    <string name="wrong_paired_insoles_number_dialog_title">Information</string>
    <string name="wrong_paired_insoles_number_dialog_mes">Please make sure that both left and right gaming insoles are paired with the tablet. The current number of paired gaming insole is  ->  </string>
    <string name="wrong_paired_insoles_number_dialog_pos_btn">Ok</string>
    <string name="wrong_paired_insoles_number_dialog_neg_btn">Skip</string>

    <!-- wrong_paired_insoles_number_dialog -->
    <string name="less_than_two_insoles_number_dialog_title">Information</string>
    <string name="less_than_two_insoles_number_dialog_mes">Not enough insoles are paired with the tablet. The current number of paired gaming insole is  ->  </string>
    <string name="less_than_two_insoles_number_dialog_pos_btn">Ok</string>
    <string name="less_than_two_insoles_number_dialog_neg_btn">Skip</string>

    <string name="insoles_are_not_a_pair_dialog_mes">Please make sure that the paired insoles belong to the same pair! The current paired insoles are: \r\n </string>
    <string name="app_version">v3.1</string>


    <!-- Strings about buttons -->
    <string name="setting_button">Einstellungen</string>
    <string name="connection_button">Verbinde mit Sohlen</string>
    <string name="gait_test_button">Ganganalyse</string>
    <string name="insole_setting_button">Einlegesohlen</string>
    <string name="plugin_test_button">Plugin</string>
    <string name="insole_data_button">Sensordaten</string>
    <string name="debugging_button">Developer-Tool</string>


    <!-- MainActivity Keywords -->
    <string name="app_version_key">App-Version </string>

</resources>
